// Vitest Snapshot v1

exports[`extract webpack.js 1`] = `const a = require("./3.js");`;

exports[`extract webpack.js 2`] = `
const a = require("./1.js");
const _module = 1;
module.exports.color = "#FBC02D";
{
  const _module2 = 2;
  console.log(_module2);
  console.log(module);
}
exports.a = 3;
`;

exports[`extract webpack.js 3`] = `module.exports = 4;`;

exports[`extract webpack_object.js 1`] = `const r = require("./387.js").default;`;

exports[`extract webpack_object.js 2`] = `module.exports = "test";`;

exports[`extract webpack-esm.js 1`] = `
const a = require("./1.js");
console.log(a.counter);
`;

exports[`extract webpack-esm.js 2`] = `
export class counter {}
let _counter = 1;
`;

exports[`extract webpack-esm.js 3`] = `export default 1;`;

exports[`extractor > path mapping 1`] = `const a = require("./3.js");`;

exports[`extractor > path mapping 2`] = `
const a = require("../1.js");
const _module = 1;
module.exports.color = "#FBC02D";
{
  const _module2 = 2;
  console.log(_module2);
  console.log(module);
}
exports.a = 3;
`;

exports[`extractor > path mapping 3`] = `module.exports = 4;`;
